hphp/test/slow/const_array_assign.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/const_array_assign.php on line 7